# logcontext

./: LICENSE.md  Makefile  README.md  pyproject.toml
contextlog/: __init__.py  _main.py
example/: demo.py
logcontext/: __init__.py  _impl.py
